# Sokoban-SFML

./: .gitignore  CMakeLists.txt  Makefile  README.md  READMEen.md  READMEru.md  READMErus.md
.github/workflows/: release.yml
GameFiles/: Button.cpp  Button.h  Button.hpp  Drawing.cpp  Drawing.h  Drawing.hpp  DropDownList.cpp  DropDownList.hpp  FileIOManager.cpp  FileIOManager.hpp  Interface.cpp  Interface.h  Interface.hpp  Localizer.cpp  Localizer.hpp  Makefile  Player.cpp  Player.h  Player.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp  map.h  settings.h
GameFiles/Interface/: Interface.cpp
GameFiles/Managers/: FileIOManager.cpp  FileIOManager.hpp  Localizer.cpp  Localizer.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp
GameFiles/Player/: Player.hpp  settings.cpp  settings.h
GameFiles/Widgets/: DropDownList.hpp
GameFiles/app_data/locale/ru/LC_MESSAGES/: ru_RU.mo
GameFiles/locale/de/LC_MESSAGES/: de_DE.mo  de_DE.po
GameFiles/locale/fr/LC_MESSAGES/: fr_FR.mo  fr_FR.po
GameFiles/locale/ru/LC_MESSAGES/: ru_RU.po
GameFiles/path/: absolute_path.h.in
GameFiles/source/Interface/: Drawing.cpp  Drawing.hpp  Environment.cpp  Environment.hpp  Interface.cpp  Interface.hpp  VCSWindow.cpp  VCSWindow.hpp  pollEvent.cpp  pollEvent.hpp
GameFiles/source/Interface/VCS/: GraphicsTree.cpp  GraphicsTree.hpp  VCSWindow.cpp  VCSWindow.hpp
GameFiles/source/Managers/: FileIOManager.cpp  FileIOManager.hpp  Localizer.cpp  Localizer.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp
GameFiles/source/Player/: Player.cpp  Player.hpp  map.h  settings.cpp  settings.h
GameFiles/source/VersionControl/: Commit.cpp  Commit.hpp  CommitTree.cpp  CommitTree.h  CommitTree.hpp  VersionControlSystem.cpp  VersionControlSystem.h  VersionControlSystem.hpp
GameFiles/source/Widgets/: Button.cpp  Button.hpp  DropDownList.cpp  DropDownList.hpp
GameFiles/source/settings/: settings.cpp  settings.h
